# mini-hotel-reservation-system

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  beigePalleteOne.xml  run_build.bat
